--- a/jenkins-x.yml
+++ b/jenkins-x.yml
@@ -1,4 +1,7 @@
 buildPack: environment
-agent:
-  label: jenkins-go
-  image: jenkinsxio/builder-go:0.0.0-SNAPSHOT-PR-4000-1
+pipelineConfig:
+  pipelines:
+    release:
+      pipeline:
+        agent:
+          image: jenkinsxio/builder-go:0.0.0-SNAPSHOT-PR-4000-1
